# Mentat

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml  verify_mentat.py
benchmarks/: CONCLUSION.md  benchmark.py  full_search_latency.py  reranker_benchmark.py  reranker_cases.json  reranker_latency.py  results.json
examples/: auto_routing.py  basic_usage.py  batch_indexing.py  collections.py  content_indexing.py  file_watcher.py  hybrid_search.py  session_lifecycle.py  two_step_retrieval.py
mentat/: __init__.py  cli.py  server.py  service.py  skill.py
mentat/adaptors/: __init__.py
mentat/core/: access_tracker.py  embeddings.py  hub.py  indexer.py  models.py  queue.py  reader.py  reranker.py  searcher.py  section_heat.py  telemetry.py  watcher.py
mentat/librarian/: engine.py
mentat/probes/: __init__.py  _utils.py  archive_probe.py  base.py  calendar_probe.py  code_probe.py  config_probe.py  csv_probe.py  docx_probe.py  image_probe.py  instruction_templates.py  json_probe.py  jsonl_probe.py  log_probe.py  markdown_probe.py  pdf_probe.py  pptx_probe.py  record_filter.py  test_instruction_templates.py  web_probe.py
mentat/storage/: base.py  cache.py  collections.py  file_store.py  filters.py  vector_db.py
mentat/wiki/: __init__.py  adaptor.py  agent_runner.py  generator.py  log.py  renderer.py
mentat/wiki/templates/: lint.claude.md  sync.claude.md  verify.claude.md
tests/: conftest.py  test_access_tracker.py  test_async_summary.py  test_async_workflow.py  test_cache.py  test_chat_history_e2e.py  test_collection_search.py  test_collections.py  test_config.py  test_doc_meta.py  test_embeddings.py  test_failed_task_store.py  test_file_store.py  test_instruction_templates.py  test_jsonl_probe.py  test_librarian.py  test_models.py  test_path_dedup.py  test_performance.py  test_probe_utils.py  test_queue.py  test_queue_perf.py  test_record_filter.py  test_reranker_provider.py  test_search_grouped.py  test_search_latency.py  test_search_reranking.py  test_section_heat.py  test_server.py  test_server_collections.py  test_skill.py  test_smoke.py  test_source_metadata.py  test_telemetry.py  test_vector_db.py  test_watcher.py  test_watcher_append_smoke.py  test_watcher_integration.py  test_wiki_phase2.py
